# ur5_motion_test

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
devel/.private/ur5_moveit_config/: .catkin  .rosinstall  local_setup.sh
devel/.private/ur5_test/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/ur_bringup/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/ur_description/: .catkin  .rosinstall
devel/.private/ur_driver/: .catkin  setup.sh
devel/.private/ur_gazebo/: .catkin  local_setup.sh  setup.sh
devel/.private/ur_kinematics/: .catkin  .rosinstall  setup.sh
devel/.private/ur_msgs/: .catkin  .rosinstall  setup.sh
devel/include/ur5_test/: target_pose.h
devel/include/ur_driver/: URDriverConfig.h
devel/include/ur_msgs/: Analog.h  Digital.h  IOStates.h  MasterboardDataMsg.h  RobotModeDataMsg.h  RobotStateRTMsg.h  SetIO.h  SetIORequest.h  SetIOResponse.h  SetPayload.h  SetPayloadRequest.h  SetPayloadResponse.h  ToolDataMsg.h
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  ur5_moveit_config.pc  ur5_test.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_gazebo.pc  ur_kinematics.pc  ur_msgs.pc
logs/ur_kinematics/: build.make.000.log.stderr
src/ur5_ROS-Gazebo/: CMakeLists.txt  target_pose.h  target_pose_publisher.cpp  ur5_path_planner.py
src/ur5_ROS-Gazebo/launch/: initialize.launch
(+145 files in other folders)
